--- a/index.html
+++ b/index.html
@@ -3,11 +3,110 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zolden</title>
+    <title>zeldon</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!--Votre Code ICI-->
-    
-    <!--FIN-->
+    <div class="container">
+        <div class="photo-card">
+            <div class="photo" ;">
+                <img src="Screenshot\ 2024-10-18\ 185720.png" alt="photo">
+            </div>
+            <div class="text">
+                <p>Muscle Fit T-shirt</p>
+                <p>$60.00</p>
+            </div>
+        </div>
+    </div>
+    <div class="photo-card">
+        <div class="photo" >
+            <img url(Screenshot\ 2024-10-18\ 185739.png);">
+        </div>
+        <div class="text">
+            <p>Sweater with voluminous sleeves</p>
+            <p>$60.00</p>
+        </div>
+    </div>
+    <div class="photo-card"></div>
+        <div class="photo">
+            <img url(Screenshot\ 2024-10-18\ 185824.png);">
+        </div>
+        <div class="text">
+            <p>Tote bag with chain</p>
+            <p>$80.00</p>
+    </div>
+    <div class="photo-card">
+            <div class="photo">
+            <img url(Screenshot\ 2024-10-18\ 185838.png);">
+            </div>
+        </div> 
+        <div class="text">
+            <p>Sweater with voluminous sleeves</p>
+            <p>$90.00</p>
+    </div>
+        <div class="photo-card"></div>
+        <div class="photo">
+        <img url(Screenshot\ 2024-10-18\ 185855.png);">
+        </div>
+        <div class="text">
+            <p>Reflective Jacket</p>
+            <p>$110.00</p>
+        </div> 
+        <div class="photo-card"></div>
+        <div class="photo">
+        <img url(Screenshot\ 2024-10-18\ 185908.png);">
+        </div>
+        <div class="text">
+            <p>Poplin shirt with belt</p>
+            <p>$60.00</p>
+    </div>
+    <div class="photo-card"></div>
+        <div class="photo">
+        <img url(Screenshot\ 2024-10-18\ 190002.png);">
+        </div>
+        <div class="text">
+            <p>Super High waist jeans</p>
+            <p>$60.00</p>
+        </div>
+        <div class="photo-card"></div>
+        <div class="photo">
+        <img url(Screenshot\ 2024-10-18\ 190014.png);">
+        </div>
+        <div class="text">
+            <p>High waist denim shorts</p>
+            <p>$30.00</p>
+        </div>
+        <div class="photo-card"></div>
+        <div class="photo"> 
+        <img url(Screenshot\ 2024-10-18\ 190039.png);">
+        </div>
+        <div class="text">
+            <p>lenin-effecct blazer</p>
+            <p>$110.00</p>
+        </div>
+        <div class="photo-card"></div>
+        <div class="photo">
+        <img url(Screenshot\ 2024-10-18\ 190051.png);">
+        </div>
+        <div class="text">
+            <p>Cataye sunglasses</p>
+            <p>$30.00</p>
+        </div>
+        <div class="photo-card"></div>
+        <div class="photo">
+        <img url(Screenshot\ 2024-10-18\ 190103.png);">
+        </div>
+        <div class="text">
+            <p>Faux leather biker Jacket</p>
+            <p>$250.00</p>
+        </div>
+        <div class="photo-card"></div>
+        <div class="photo"> 
+        <img url(Screenshot\ 2024-10-18\ 190128.png);">
+        </div>
+        <div class="text">
+            <p>Puffer Jacket</p>
+            <p>$110.00</p>
+        </div>
 </body>
 </html>
