Andrianina@estcraft nena manomboka eo amle div banner

--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zolden</title>
+    <link rel="stylesheet" href="style.css">
+    <title>maquete zolden</title>
 </head>
 <body>
-    <!--Votre Code ICI-->
-    
-    <!--FIN-->
+    <div class="banner">
+        <div class="app-text">
+           <h1>T-shirts<br>for Everyone</h1>
+           <p>Stock up on our best-celling <br> T-shirts for everyone</p>
+           <small><b>Shop Now</b></small>
+        </div>                 
+        <div class="app-picture">
+            <img src="image projet git.jpeg" alt="man">
+        </div>
+    </div>
 </body>
 </html>
