--- a/index.html
+++ b/index.html
@@ -3,11 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Zolden</title>
 </head>
 <body>
     <!--Votre Code ICI-->
-    
+    <div>
+        <div id="information">
+            <div class="information-1"> 
+                <img src="image/Enveloppe.PNG" alt="">
+                <p>A question? Write to us at email@example.com</p>
+            </div>
+            <div class="information-1"> 
+                <img src="image/Carte credit.PNG" alt="">
+                <p>Secure credit card payement</p>
+            </div>
+            <div class="information-1"> 
+                <img src="image/Portefeuille.PNG" alt="">
+                <p>Free delivery for orders over $250</p>
+            </div>
+            <div class="information-1"> 
+                <img src="image/Avion.PNG" alt="">
+                <p>Return of goods from anywhere in the world</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <i class='bx bx-envelope'></i>
+            <p>A question? Write to us at email@example.com</p>
+        </div>
+        <div class="col">
+            <i class='bx bx-credit-card-alt' ></i>
+            <p>Secure credit card payement</p>
+        </div>
+        <div class="col">
+            <i class='bx bx-wallet-alt' ></i>
+            <p>Free delivery for orders over $250</p>
+        </div>
+        <div class="col">
+            <i class='bx bxs-plane-alt'></i>
+            <p>Return of goods from anywhere in the world</p>
+        </div>
+    </div>
+    <hr>
     <!--FIN-->
 </body>
 </html>
