--- a/index.html
+++ b/index.html
@@ -3,110 +3,104 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>zeldon</title>
+    <title>Zolden</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <div class="photo-card">
-            <div class="photo" ;">
-                <img src="Screenshot\ 2024-10-18\ 185720.png" alt="photo">
-            </div>
+        <div class="item">
+            <img src="image/Screenshot 2024-10-18 185720.png" alt="Photo 1">
             <div class="text">
                 <p>Muscle Fit T-shirt</p>
                 <p>$60.00</p>
             </div>
         </div>
-    </div>
-    <div class="photo-card">
-        <div class="photo" >
-            <img url(Screenshot\ 2024-10-18\ 185739.png);">
-        </div>
-        <div class="text">
-            <p>Sweater with voluminous sleeves</p>
-            <p>$60.00</p>
-        </div>
-    </div>
-    <div class="photo-card"></div>
-        <div class="photo">
-            <img url(Screenshot\ 2024-10-18\ 185824.png);">
-        </div>
-        <div class="text">
-            <p>Tote bag with chain</p>
-            <p>$80.00</p>
-    </div>
-    <div class="photo-card">
-            <div class="photo">
-            <img url(Screenshot\ 2024-10-18\ 185838.png);">
+        <div class="item">
+            <img src="image/Screenshot 2024-10-18 185739.png" alt="Photo 2">
+            <div class="text">
+                <p>sweather with voluminous </p>
+                <p>$60.00</p>
             </div>
-        </div> 
-        <div class="text">
-            <p>Sweater with voluminous sleeves</p>
-            <p>$90.00</p>
+        </div>
+        <div class="item">
+            <img src="image/Screenshot 2024-10-18 185824.png" alt="Photo 3">
+            <div class="text">
+                <p>Tote bag with chain</p>
+                <p>$80.00</p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="image/Screenshot 2024-10-18 185838.png" alt="Photo 4">
+            <div class="text">
+                <p>sweather with voluminous sleeves</p>
+                <p>$90.00</p>
+            </div>
+        </div>
     </div>
-        <div class="photo-card"></div>
-        <div class="photo">
-        <img url(Screenshot\ 2024-10-18\ 185855.png);">
+    <div class="container">
+        <div class="item">
+            <img src="image/Screenshot 2024-10-18 185855.png" alt="Photo 5">
+            <div class="text">
+                <p>Reflective Jacket</p>
+                <p>$110.00</p>
+            </div>
         </div>
-        <div class="text">
-            <p>Reflective Jacket</p>
-            <p>$110.00</p>
-        </div> 
-        <div class="photo-card"></div>
-        <div class="photo">
-        <img url(Screenshot\ 2024-10-18\ 185908.png);">
+        <div class="item">
+            <img src="image/Screenshot 2024-10-18 185908.png" alt="Photo 6">
+            <div class="text">
+                <p>Poplin shirt with belt</p>
+                <p>$60.00</p>
+            </div>
         </div>
-        <div class="text">
-            <p>Poplin shirt with belt</p>
-            <p>$60.00</p>
+        <div class="item">
+            <img src="image/Screenshot 2024-10-18 190002.png" alt="Photo 7">
+            <div class="text">
+                <p>Super high waist jeans</p>
+                <p>$60.00</p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="image/Screenshot 2024-10-18 190014.png" alt="Photo 8">
+            <div class="text">
+                <p>High waist denim shorts</p>
+                <p>$30.00</p>
+            </div>
+        </div>
     </div>
-    <div class="photo-card"></div>
-        <div class="photo">
-        <img url(Screenshot\ 2024-10-18\ 190002.png);">
+    <div class="container">
+        <div class="item">
+            <img src="image/Screenshot 2024-10-18 190039.png" alt="Photo 9">
+            <div class="text">
+                <p>Ligne 1</p>
+                <p>Ligne 2</p>
+                <p>Ligne 3</p>
+            </div>
         </div>
-        <div class="text">
-            <p>Super High waist jeans</p>
-            <p>$60.00</p>
+        <div class="item">
+            <img src="image/Screenshot 2024-10-18 190051.png" alt="Photo 10">
+            <div class="text">
+                <p>Ligne 1</p>
+                <p>Ligne 2</p>
+                <p>Ligne 3</p>
+            </div>
         </div>
-        <div class="photo-card"></div>
-        <div class="photo">
-        <img url(Screenshot\ 2024-10-18\ 190014.png);">
+        <div class="item">
+            <img src="image/Screenshot 2024-10-18 190103.png" alt="Photo 11">
+            <div class="text">
+                <p>Ligne 1</p>
+                <p>Ligne 2</p>
+                <p>Ligne 3</p>
+            </div>
         </div>
-        <div class="text">
-            <p>High waist denim shorts</p>
-            <p>$30.00</p>
+        <div class="item">
+            <img src="image/Screenshot 2024-10-18 190128.png" alt="Photo 12">
+            <div class="text">
+                <p>Ligne 1</p>
+                <p>Ligne 2</p>
+                <p>Ligne 3</p>
+            </div>
         </div>
-        <div class="photo-card"></div>
-        <div class="photo"> 
-        <img url(Screenshot\ 2024-10-18\ 190039.png);">
-        </div>
-        <div class="text">
-            <p>lenin-effecct blazer</p>
-            <p>$110.00</p>
-        </div>
-        <div class="photo-card"></div>
-        <div class="photo">
-        <img url(Screenshot\ 2024-10-18\ 190051.png);">
-        </div>
-        <div class="text">
-            <p>Cataye sunglasses</p>
-            <p>$30.00</p>
-        </div>
-        <div class="photo-card"></div>
-        <div class="photo">
-        <img url(Screenshot\ 2024-10-18\ 190103.png);">
-        </div>
-        <div class="text">
-            <p>Faux leather biker Jacket</p>
-            <p>$250.00</p>
-        </div>
-        <div class="photo-card"></div>
-        <div class="photo"> 
-        <img url(Screenshot\ 2024-10-18\ 190128.png);">
-        </div>
-        <div class="text">
-            <p>Puffer Jacket</p>
-            <p>$110.00</p>
-        </div>
+    </div>
 </body>
 </html>
+
