vita norma Dude

--- a/index.html
+++ b/index.html
@@ -71,33 +71,29 @@
         <div class="item">
             <img src="image/Screenshot 2024-10-18 190039.png" alt="Photo 9">
             <div class="text">
-                <p>Ligne 1</p>
-                <p>Ligne 2</p>
-                <p>Ligne 3</p>
+                <p>Linen-effect blazer</p>
+                <p>$110.00</p>
             </div>
         </div>
         <div class="item">
             <img src="image/Screenshot 2024-10-18 190051.png" alt="Photo 10">
             <div class="text">
-                <p>Ligne 1</p>
-                <p>Ligne 2</p>
-                <p>Ligne 3</p>
+                <p>Cataye sunglasses</p>
+                <p>$30.00</p>
             </div>
         </div>
         <div class="item">
             <img src="image/Screenshot 2024-10-18 190103.png" alt="Photo 11">
             <div class="text">
-                <p>Ligne 1</p>
-                <p>Ligne 2</p>
-                <p>Ligne 3</p>
+                <p>Faux leather biker Jacket</p>
+                <p>$250.00</p>
             </div>
         </div>
         <div class="item">
             <img src="image/Screenshot 2024-10-18 190128.png" alt="Photo 12">
             <div class="text">
-                <p>Ligne 1</p>
-                <p>Ligne 2</p>
-                <p>Ligne 3</p>
+                <p>Puffer Jacket</p>
+                <p>$110.00</p>
             </div>
         </div>
     </div>
