--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <header>
         <img src="Image/logo.JPG" alt="" id="logo">
         <nav id="navbar">
+            <div id="hamburger-menu" onclick="display_menu()">
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+            </div>
             <div id="menu-1">
                 <ul>
                     <li>
@@ -100,5 +105,7 @@
             </div>
         </nav>
     </header>
+    <script src="app.js"></script>
+    
 </body>
 </html>
