--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
            <small><b>Shop Now</b></small>
         </div>                 
         <div class="app-picture">
-            <img src="image projet git.jpeg" alt="man">
+            <img src="image/image projet git.jpeg" alt="man">
         </div>
     </div>
 </body>
