Web Site Section-2 and Full Site Navbar

--- a/index.html
+++ b/index.html
@@ -105,6 +105,34 @@
             </div>
         </nav>
     </header>
+
+    <!--Section-2 Anjara -->
+    <section id="section-2">
+        <div id="section-2-left" class="section-2-content">
+            <div>
+                <h4>Accessories</h4>
+                <p>Everyone's talking about</p>
+            </div>
+            <a href="#">Shop Now <i class="fa fa-arrow-right" style="font-size:0.75em;"></i></a>
+        </div>
+        <div id="section-2-right">
+            <div id="section-2-right-top" class="section-2-content">
+                <div>
+                    <h4>Woman</h4>
+                    <p>Elevated Confort</p>
+                </div>
+                <a href="#">Shop Now <i class="fa fa-arrow-right" style="font-size:0.75em;"></i></a>
+            </div>
+            <div id="section-2-right-bottom" class="section-2-content">
+                <div>
+                    <h4>Man</h4>
+                    <p>Your Wardrobe refresh</p>
+                </div>
+                <a href="#">Shop Now <i class="fa fa-arrow-right" style="font-size:0.75em;"></i></a>
+            </div>
+        </div>
+    </section>
+    <!--FIN Section-2-Anjara-->
     <script src="app.js"></script>
     
 </body>
