--- a/index.html
+++ b/index.html
@@ -6,76 +6,9 @@
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="stylesheet" href="fontawesome-free-5.15.3-web/css/all.css">
     <title>Zolden</title>
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="fontawesome-free-5.15.3-web/css/all.css">
 </head>
 <body>
-    <!--Votre Code ICI-->
-    <div>
-        <div id="information">
-            <div class="information-1"> 
-                <img src="image/Enveloppe.PNG" alt="">
-                <p>A question? Write to us at email@example.com</p>
-            </div>
-            <div class="information-1"> 
-                <img src="image/Carte credit.PNG" alt="">
-                <p>Secure credit card payement</p>
-            </div>
-            <div class="information-1"> 
-                <img src="image/Portefeuille.PNG" alt="">
-                <p>Free delivery for orders over $250</p>
-            </div>
-            <div class="information-1"> 
-                <img src="image/Avion.PNG" alt="">
-                <p>Return of goods from anywhere in the world</p>
-            </div>
-        </div>
-    </div>
-
-    <hr>
-    <!--FIN-->
-        <footer>
-            <div>
-                <h3>Customer service</h3>
-                <p>Need Help?</p>
-                <p>FAQ</p>
-                <P>Secure payment</P>
-                <p>Delivery</p>
-                <p>Returms & refunds</p>
-                <p>Contact us</p>
-            </div>
-            <div>
-                <h3>Special services</h3>
-                <p>Free delivery for order over $250</p>
-                <p>Chronapost Express delivery 24h</p>
-                <p>E-reservation</p>
-                <p>Expended returns</p>
-            </div>
-            <div>
-                <h3>Follow us</h3>
-                <p>Instagram</p>
-                <p>Facebook</p>
-                <p>Twitter</p>
-                <p>Pinterest</p>
-            </div>
-            <div>
-                <h3>Newsletter</h3>
-                <p>Sing up for email updates on the latest
-                    collections. compaigns and video
-                </p>
-                <div id="contact">
-                    <input type="email" placeholder="email adress">
-                    <button>OK</button>
-                </div>
-                <div id="icons">
-                    <i class="fab fa-youtube"></i>
-                    <i class="fab fa-facebook"></i>
-                    <i class="fab fa-instagram-square"></i>
-                </div>
-            </div>
-        </footer>
-        <hr>
-        <div id="farany">
-            <span>Copyright &copy; 2022 powered by Crocoblock,Inc. All rights reserved</span>
-            <span>Privacy  Policy &nbsp; &nbsp; &nbsp; Terms</span>
-        </div>
 </body>
 </html>
