--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
 <body>
     <!--Lucacia's Code-->
     <div id="first">
-        <div id="good" align="center">
+        <div id="good" style="text-align:center;">
             <h4 id="new">New arrival</h4>
             <h1 id="discover">Discover the latest articles .</h1>
             <a href="#"><button id="valider">Shop now <i class="fa fa-arrow-right"></i></button></a>
         </div>
+    </div>
     <!--END Lucacia's Code-->
     
     <!--DUDE Code-->
