--- a/index.html
+++ b/index.html
@@ -261,6 +261,80 @@
         </div>
     </section>
     <!--END estcraft's Code-->
+    
+    <!--Mialy's Code Footer-->
+    <div>
+        <div id="information">
+            <div class="information-1"> 
+                <img src="image/Enveloppe.PNG" alt="">
+                <p>A question? Write to us at email@example.com</p>
+            </div>
+            <div class="information-1"> 
+                <img src="image/Carte credit.PNG" alt="">
+                <p>Secure credit card payment</p>
+            </div>
+            <div class="information-1"> 
+                <img src="image/Portefeuille.PNG" alt="">
+                <p>Free delivery for orders over $250</p>
+            </div>
+            <div class="information-1"> 
+                <img src="image/Avion.PNG" alt="">
+                <p>Return of goods from anywhere in the world</p>
+            </div>
+        </div>
+    </div>
+
+    <hr>
+    <!--FIN-->
+        <footer>
+            <div>
+                <h3>Customer service</h3>
+                <p>Need Help?</p>
+                <p>FAQ</p>
+                <P>Secure payment</P>
+                <p>Delivery</p>
+                <p>Returms & refunds</p>
+                <p>Contact us</p>
+            </div>
+            <div>
+                <h3>Special services</h3>
+                <p>Free delivery for order over $250</p>
+                <p>Chronapost Express delivery 24h</p>
+                <p>E-reservation</p>
+                <p>Expended returns</p>
+            </div>
+            <div>
+                <h3>Follow us</h3>
+                <p>Instagram</p>
+                <p>Facebook</p>
+                <p>Twitter</p>
+                <p>Pinterest</p>
+            </div>
+            <div>
+                <h3>Newsletter</h3>
+                <p>Sign up for email updates on the latest
+                    collections. compaigns and video
+                </p>
+                <div id="contact">
+                    <input type="email" placeholder="email adress"/>
+                    <button>OK</button>
+                </div>
+                <div id="icons">
+                    <i class="fab fa-youtube"></i>
+                    <i class="fab fa-facebook"></i>
+                    <i class="fab fa-instagram-square"></i>
+                </div>
+            </div>
+        </footer>
+        <hr>
+        <div id="farany">
+            <span>Copyright &copy; 2022 powered by Crocoblock,Inc. All rights reserved</span>
+            <span>
+                <a href="#">Privacy  Policy</a><a href="#">Terms</a>
+            </span>
+        </div>
+    </footer>
+    <!--END Mialy's CODE-->
     <script src="app.js"></script>
 </body>
 </html>
